SET(CMAKE_BUILD_TYPE "Debug")
INCLUDE(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)

IF(COMPILER_SUPPORTS_CXX11)
    add_definitions("-std=c++11")
ENDIF()


SET(CMAKE_CXX_FLAGES_DEBUG "${CMAKE_CXX_FLAGES} -O0   -pipe -Wall -fno-strict-aliasing -D_GNU_SOURCE -D_REENTRANT -fPIC -g -ggdb")
SET(CMAKE_CXX_FLAGES_RELEASE"${CMAKE_CXX_FLAGES} -O0   -pipe -Wall -fno-strict-aliasing -D_GNU_SOURCE -D_REENTRANT -fPIC ")


INCLUDE_DIRECTORIES(../inc/)
LINK_DIRECTORIES(../src)
SET(LIBRARY libcurl.so libKMS.so)


AUX_SOURCE_DIRECTORY(. SRC)

ADD_EXECUTABLE(kms_sample ${SRC})
TARGET_LINK_LIBRARIES(kms_sample ${LIBRARY})

