SET(CMAKE_BUILD_TYPE "Debug")
INCLUDE(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
IF(COMPILER_SUPPORTS_CXX11)
    add_definitions("-std=c++11")
ENDIF()


SET(CMAKE_CXX_FLAGES_DEBUG "${CMAKE_CXX_FLAGES} -O0   -pipe -Wall -fno-strict-aliasing -D_GNU_SOURCE -D_REENTRANT -fPIC -g -ggdb")
SET(CMAKE_CXX_FLAGES_RELEASE"${CMAKE_CXX_FLAGES} -O0   -pipe -Wall -fno-strict-aliasing -D_GNU_SOURCE -D_REENTRANT -fPIC ")

INCLUDE_DIRECTORIES(../inc/)

SET(LIBRARY libcurl.so libssl.so)

AUX_SOURCE_DIRECTORY(. SRC)
ADD_LIBRARY(KMS SHARED ${SRC})
ADD_LIBRARY(KMS_STATIC STATIC ${SRC})
TARGET_LINK_LIBRARIES(KMS ${LIBRARY})
SET_TARGET_PROPERTIES(KMS_STATIC PROPERTIES OUTPUT_NAME "KMS")
SET_TARGET_PROPERTIES(KMS PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(KMS_STATIC PROPERTIES CLEAN_DIRECT_OUTPUT 1)

